[package]
name = "rustun"
version = "0.1.0"
authors = ["scriptjunkie", "skess42"]
edition = "2018"

[dependencies]
aes-gcm = "0.9"
base64 = "0.13"
bincode = "1"
libc = "0"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
